fix batch printing